--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-247.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-291.3KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.76MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-403.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.94MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇮🇹 意大利-575.1KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
   - {name: 🇺🇸 美国-1.56MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-669.3KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 阿联酋-2.50MB/s(Youtube:不良林), server: 193.123.67.0, port: 11188, type: vmess, uuid: 280683d0-369c-42e9-be4b-e723a73b7785, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 193.123.67.0}}
-  - {name: 🇨🇦 加拿大-494.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-784.0KB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-229.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-421.3KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-7.74MB/s(Youtube:不良林), server: 953e517.v9.gladns.com, port: 3331, type: vmess, uuid: 57e0cb4d-eae5-48ec-8091-149dc2b309e0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /s/953e517.fm.apple.com:89692, ws-headers: {Host: 953e517.v9.gladns.com}}
+  - {name: 🇨🇦 加拿大-1.14MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-644.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.30MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-247.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-403.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-575.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
-      - 阿联酋-2.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-494.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-229.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-421.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-247.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-403.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-575.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
-      - 阿联酋-2.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-494.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-229.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-421.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-247.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-403.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-575.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
-      - 阿联酋-2.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-494.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-229.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-421.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-247.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-403.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-575.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
-      - 阿联酋-2.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-494.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-229.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-421.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-247.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-403.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-575.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
-      - 阿联酋-2.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-494.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-229.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-421.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-247.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-403.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-575.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
-      - 阿联酋-2.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-494.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-229.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-421.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-247.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-291.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.76MB/s(Youtube:不良林)
-      - 🇫🇷 法国-403.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.94MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-575.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-669.3KB/s(Youtube:不良林)
-      - 阿联酋-2.50MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-494.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-784.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-229.9KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-421.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-7.74MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-644.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.30MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
