--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-694.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-3.09MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-345.9KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-996.7KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-391.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.30MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-671.7KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-2.14MB/s(Youtube:不良林), server: jp-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp-03.licom.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-961.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇫🇷 法国-828.6KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-577.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.41MB/s(Youtube:不良林), server: 134.195.196.89, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇦 加拿大-581.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-1.57MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-408.6KB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.55MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-694.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-996.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-391.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-671.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-961.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-828.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-577.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-581.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-408.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-694.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-996.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-391.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-671.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-961.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-828.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-577.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-581.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-408.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-694.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-996.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-391.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-671.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-961.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-828.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-577.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-581.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-408.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-694.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-996.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-391.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-671.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-961.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-828.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-577.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-581.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-408.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-694.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-996.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-391.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-671.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-961.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-828.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-577.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-581.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-408.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-694.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-996.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-391.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-671.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-961.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-828.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-577.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-581.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-408.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-694.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-345.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-996.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-391.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-671.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-961.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-828.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-577.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.41MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-581.1KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.57MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-408.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.55MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
